footer section done

--- a/styles/style.css
+++ b/styles/style.css
@@ -199,7 +199,6 @@ main {
     font-size: 32px;
     font-weight: 700;
     line-height: 38px;
-        
 }
 
 .box1,
@@ -293,7 +292,85 @@ main {
 }
 .input-area {
     display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+/* support section styles */
+.subscribe-section {
+    padding: 80px 100px 80px 100px;
+    margin-bottom: 80px;
+    text-align: center;
+    border-radius: 24px;
+    background: rgb(198, 228, 214);
+}
+
+.support .support-title {
+    color: rgb(255, 255, 255);
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+.support-description {
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin: 16px 0px;
+
+}
+
+.input-box input[type="email"] {
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 8px 0px 0px 8px;
+    background: rgb(255, 255, 255);
+    padding: 19px 20px 19px 20px;
+    width: 548px;
+}
+
+.input-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10;
+
+}
+
+.input-box input[type="submit"] {
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    font-weight: 600;
+    padding: 17px 34px 17px 34px;
+    border: none;
+    border-radius: 0px 8px 8px 0px;
+    background: rgb(0, 106, 80);
+    transition-duration: 0.15s;
+}
+.input-box input[type="submit"]:hover {
+    opacity: .8;
+}
+
+/* footer styles */
+.footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background: rgb(255, 255, 255);
+    padding: 50px 160px 50px 160px;
+    gap: 32;
+    align-items: center;
+}
+hr {
+    width: 1122px;
+    margin-top: 20px;
+    color: rgba(14, 14, 14, 0.1);
+}
+.f-bottom img {
+    margin: 32px 20px;
 }
