--- a/styles/style.css
+++ b/styles/style.css
@@ -110,6 +110,16 @@ main {
     width: 622px;
     margin: 16px 0px;
 }
+/* pillars-of-bd styles */
+.item {
+    box-sizing: border-box;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 16px;
+    background: rgb(255, 255, 255);
+    padding: 24px;
+    margin-top: 32px;
+    width: 302px;
+}
 /* Future-vision-section styles */
 .Future-vision {
     margin: 80px 0px;
