--- a/styles/style.css
+++ b/styles/style.css
@@ -35,10 +35,12 @@ main {
     cursor: pointer;
 }
 .btn-primary:hover {
-    opacity: .8;
+    opacity: .6;
+    background-color: red;
 }
 .btn-primary:active {
     opacity: .9;
+    background: rgb(0, 106, 80);
 }
 .section-title {
     color: rgb(14, 14, 14);
@@ -75,7 +77,9 @@ main {
     transition-duration: 0.15s;
 }
 .sign-in-btn:hover {
-    opacity: .8;
+    opacity: .6;
+    background-color: rgb(0, 106, 80);
+    color: aliceblue;
 }
 /* banner styles */
 .banner-container {
